IngressAndRestrictionPod/Ingress/ingress5/DepWithClusterIp11.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: nginx1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
        - name: cm2
          mountPath: /usr/share/nginx/html    
      volumes:
      - name: cm2
        configMap:
          name: my-config2
