IngressAndRestrictionPod/Ingress/ingress5/DepWithClusterIp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  labels:
    app: nginx1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
        - name: cm
          mountPath: /usr/share/nginx/html    
      volumes:
      - name: cm
        configMap:
          name: my-config   
---
apiVersion: v1
kind: Service
metadata:
  name: sv1
spec:
  selector:
    app: nginx1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
